--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.3",
     "multer": "^1.4.5-lts.2",
+    "node-mailjet": "^6.0.11",
     "nodemailer": "^6.10.0",
     "onesignal-node": "^3.4.0",
     "socket.io": "^4.8.1",
